# lightning-hydra-poetry-template

./: pyproject.toml
