[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "lightning-hydra-poetry-template"
version = "2.0.2"
description = "Poetry Supported `lightning-hydra-template`"
authors = ["SeongHun Kim <shkim@deephearing.com>"]
readme = "README.md"
packages = [{include="src/export"}]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^2.0.1"
lightning = "^2.0.2"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
torchmetrics = "^0.11.4"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
pyrootutils = "^1.0.4"
pre-commit = "^3.3.2"
rich = "^13.3.5"
sh = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
